// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`discover - group 1 Discover Embeddable - Generate CSV report per panel Generate Embeddable CSV for savedDiscoverSessionWithDataView generates a report with custom time range 1`] = `
"\\"@timestamp\\",extension
\\"Sep 21, 2015 @ 00:59:00.367\\",jpg
\\"Sep 20, 2015 @ 19:49:05.899\\",jpg
\\"Sep 20, 2015 @ 19:29:43.926\\",jpg
\\"Sep 20, 2015 @ 17:38:42.285\\",jpg
\\"Sep 20, 2015 @ 17:08:30.609\\",jpg
\\"Sep 20, 2015 @ 16:53:17.163\\",jpg
\\"Sep 20, 2015 @ 16:45:00.480\\",jpg
\\"Sep 20, 2015 @ 16:08:49.527\\",css
\\"Sep 20, 2015 @ 15:55:31.002\\",css
\\"Sep 20, 2015 @ 15:32:20.876\\",css
\\"Sep 20, 2015 @ 15:20:47.204\\",png
\\"Sep 20, 2015 @ 15:14:43.471\\",css
\\"Sep 20, 2015 @ 15:14:26.330\\",png
\\"Sep 20, 2015 @ 15:03:45.263\\",jpg
\\"Sep 20, 2015 @ 14:55:58.779\\",jpg
\\"Sep 20, 2015 @ 14:47:52.748\\",css
\\"Sep 20, 2015 @ 14:44:34.702\\",jpg
\\"Sep 20, 2015 @ 14:39:50.742\\",jpg
\\"Sep 20, 2015 @ 14:39:11.084\\",jpg
\\"Sep 20, 2015 @ 14:25:09.526\\",jpg
\\"Sep 20, 2015 @ 14:21:12.441\\",php
\\"Sep 20, 2015 @ 14:18:32.300\\",gif
\\"Sep 20, 2015 @ 14:14:23.696\\",jpg
\\"Sep 20, 2015 @ 14:14:13.170\\",jpg
\\"Sep 20, 2015 @ 13:32:59.544\\",css
\\"Sep 20, 2015 @ 13:14:11.094\\",jpg
\\"Sep 20, 2015 @ 13:09:17.207\\",jpg
\\"Sep 20, 2015 @ 12:50:29.152\\",jpg
\\"Sep 20, 2015 @ 12:44:47.907\\",jpg
\\"Sep 20, 2015 @ 12:35:46.175\\",jpg
\\"Sep 20, 2015 @ 12:35:16.811\\",css
\\"Sep 20, 2015 @ 12:34:41.080\\",jpg
\\"Sep 20, 2015 @ 12:27:57.163\\",jpg
\\"Sep 20, 2015 @ 12:25:20.687\\",jpg
\\"Sep 20, 2015 @ 12:24:50.429\\",jpg
\\"Sep 20, 2015 @ 11:47:17.612\\",jpg
\\"Sep 20, 2015 @ 11:41:19.508\\",jpg
\\"Sep 20, 2015 @ 11:37:37.381\\",jpg
\\"Sep 20, 2015 @ 11:30:51.674\\",css
\\"Sep 20, 2015 @ 11:24:51.803\\",jpg
\\"Sep 20, 2015 @ 11:14:23.740\\",jpg
\\"Sep 20, 2015 @ 11:03:40.696\\",css
\\"Sep 20, 2015 @ 10:58:13.547\\",jpg
\\"Sep 20, 2015 @ 10:53:07.793\\",jpg
\\"Sep 20, 2015 @ 10:42:16.645\\",png
\\"Sep 20, 2015 @ 10:41:14.358\\",css
\\"Sep 20, 2015 @ 10:31:30.074\\",css
\\"Sep 20, 2015 @ 10:31:00.654\\",jpg
\\"Sep 20, 2015 @ 10:30:25.744\\",css
\\"Sep 20, 2015 @ 10:23:27.213\\",png
\\"Sep 20, 2015 @ 10:16:44.923\\",jpg
\\"Sep 20, 2015 @ 09:48:34.742\\",css
\\"Sep 20, 2015 @ 09:48:21.935\\",jpg
\\"Sep 20, 2015 @ 09:43:53.380\\",jpg
\\"Sep 20, 2015 @ 09:38:59.682\\",jpg
\\"Sep 20, 2015 @ 09:22:15.681\\",jpg
\\"Sep 20, 2015 @ 09:21:34.096\\",jpg
\\"Sep 20, 2015 @ 09:11:27.068\\",gif
\\"Sep 20, 2015 @ 09:08:30.796\\",css
\\"Sep 20, 2015 @ 08:49:57.121\\",jpg
\\"Sep 20, 2015 @ 08:40:41.779\\",png
\\"Sep 20, 2015 @ 08:34:53.186\\",css
\\"Sep 20, 2015 @ 08:15:38.922\\",png
\\"Sep 20, 2015 @ 07:50:33.356\\",jpg
\\"Sep 20, 2015 @ 07:23:02.614\\",css
\\"Sep 20, 2015 @ 07:18:15.800\\",css
\\"Sep 20, 2015 @ 07:07:01.048\\",jpg
\\"Sep 20, 2015 @ 06:41:00.585\\",css
\\"Sep 20, 2015 @ 06:39:27.633\\",jpg
\\"Sep 20, 2015 @ 06:26:36.476\\",png
\\"Sep 20, 2015 @ 06:26:10.475\\",css
\\"Sep 20, 2015 @ 06:24:30.150\\",jpg
\\"Sep 20, 2015 @ 06:03:53.342\\",jpg
\\"Sep 20, 2015 @ 05:48:01.031\\",gif
\\"Sep 20, 2015 @ 04:32:06.465\\",jpg
\\"Sep 20, 2015 @ 04:22:45.702\\",jpg
\\"Sep 20, 2015 @ 04:18:54.867\\",css
\\"Sep 20, 2015 @ 04:11:49.921\\",jpg
\\"Sep 20, 2015 @ 03:48:32.880\\",jpg
\\"Sep 20, 2015 @ 03:44:10.788\\",jpg
"
`;

exports[`discover - group 1 Discover Embeddable - Generate CSV report per panel Generate Embeddable CSV for savedDiscoverSessionWithDataView generates a report with global time range 1`] = `
"\\"@timestamp\\",extension
\\"Sep 21, 2015 @ 11:26:44.669\\",jpg
\\"Sep 21, 2015 @ 11:17:34.550\\",jpg
\\"Sep 21, 2015 @ 10:49:38.164\\",jpg
\\"Sep 21, 2015 @ 10:48:46.371\\",jpg
\\"Sep 21, 2015 @ 10:33:15.502\\",jpg
\\"Sep 21, 2015 @ 10:15:36.162\\",jpg
\\"Sep 21, 2015 @ 10:10:20.302\\",jpg
\\"Sep 21, 2015 @ 10:07:18.887\\",php
\\"Sep 21, 2015 @ 09:59:45.555\\",jpg
\\"Sep 21, 2015 @ 09:36:07.770\\",jpg
\\"Sep 21, 2015 @ 09:20:36.111\\",css
\\"Sep 21, 2015 @ 09:14:28.585\\",jpg
\\"Sep 21, 2015 @ 08:52:59.787\\",jpg
\\"Sep 21, 2015 @ 08:42:28.854\\",jpg
\\"Sep 21, 2015 @ 08:07:44.865\\",jpg
\\"Sep 21, 2015 @ 08:05:13.743\\",css
\\"Sep 21, 2015 @ 07:19:42.176\\",jpg
\\"Sep 21, 2015 @ 06:49:26.535\\",jpg
\\"Sep 21, 2015 @ 06:31:49.112\\",jpg
\\"Sep 21, 2015 @ 05:34:13.304\\",gif
\\"Sep 21, 2015 @ 05:06:15.814\\",jpg
\\"Sep 21, 2015 @ 04:08:39.759\\",png
\\"Sep 21, 2015 @ 03:41:43.705\\",jpg
\\"Sep 21, 2015 @ 02:54:47.500\\",jpg
\\"Sep 21, 2015 @ 00:59:00.367\\",jpg
\\"Sep 20, 2015 @ 19:49:05.899\\",jpg
\\"Sep 20, 2015 @ 19:29:43.926\\",jpg
\\"Sep 20, 2015 @ 17:38:42.285\\",jpg
\\"Sep 20, 2015 @ 17:08:30.609\\",jpg
\\"Sep 20, 2015 @ 16:53:17.163\\",jpg
\\"Sep 20, 2015 @ 16:45:00.480\\",jpg
\\"Sep 20, 2015 @ 16:08:49.527\\",css
\\"Sep 20, 2015 @ 15:55:31.002\\",css
\\"Sep 20, 2015 @ 15:32:20.876\\",css
\\"Sep 20, 2015 @ 15:20:47.204\\",png
\\"Sep 20, 2015 @ 15:14:43.471\\",css
\\"Sep 20, 2015 @ 15:14:26.330\\",png
\\"Sep 20, 2015 @ 15:03:45.263\\",jpg
\\"Sep 20, 2015 @ 14:55:58.779\\",jpg
\\"Sep 20, 2015 @ 14:47:52.748\\",css
\\"Sep 20, 2015 @ 14:44:34.702\\",jpg
\\"Sep 20, 2015 @ 14:39:50.742\\",jpg
\\"Sep 20, 2015 @ 14:39:11.084\\",jpg
\\"Sep 20, 2015 @ 14:25:09.526\\",jpg
\\"Sep 20, 2015 @ 14:21:12.441\\",php
\\"Sep 20, 2015 @ 14:18:32.300\\",gif
\\"Sep 20, 2015 @ 14:14:23.696\\",jpg
\\"Sep 20, 2015 @ 14:14:13.170\\",jpg
\\"Sep 20, 2015 @ 13:32:59.544\\",css
\\"Sep 20, 2015 @ 13:14:11.094\\",jpg
\\"Sep 20, 2015 @ 13:09:17.207\\",jpg
\\"Sep 20, 2015 @ 12:50:29.152\\",jpg
\\"Sep 20, 2015 @ 12:44:47.907\\",jpg
\\"Sep 20, 2015 @ 12:35:46.175\\",jpg
\\"Sep 20, 2015 @ 12:35:16.811\\",css
\\"Sep 20, 2015 @ 12:34:41.080\\",jpg
\\"Sep 20, 2015 @ 12:27:57.163\\",jpg
\\"Sep 20, 2015 @ 12:25:20.687\\",jpg
\\"Sep 20, 2015 @ 12:24:50.429\\",jpg
\\"Sep 20, 2015 @ 11:47:17.612\\",jpg
\\"Sep 20, 2015 @ 11:41:19.508\\",jpg
\\"Sep 20, 2015 @ 11:37:37.381\\",jpg
\\"Sep 20, 2015 @ 11:30:51.674\\",css
\\"Sep 20, 2015 @ 11:24:51.803\\",jpg
\\"Sep 20, 2015 @ 11:14:23.740\\",jpg
\\"Sep 20, 2015 @ 11:03:40.696\\",css
\\"Sep 20, 2015 @ 10:58:13.547\\",jpg
\\"Sep 20, 2015 @ 10:53:07.793\\",jpg
\\"Sep 20, 2015 @ 10:42:16.645\\",png
\\"Sep 20, 2015 @ 10:41:14.358\\",css
\\"Sep 20, 2015 @ 10:31:30.074\\",css
\\"Sep 20, 2015 @ 10:31:00.654\\",jpg
\\"Sep 20, 2015 @ 10:30:25.744\\",css
\\"Sep 20, 2015 @ 10:23:27.213\\",png
\\"Sep 20, 2015 @ 10:16:44.923\\",jpg
\\"Sep 20, 2015 @ 09:48:34.742\\",css
\\"Sep 20, 2015 @ 09:48:21.935\\",jpg
\\"Sep 20, 2015 @ 09:43:53.380\\",jpg
\\"Sep 20, 2015 @ 09:38:59.682\\",jpg
\\"Sep 20, 2015 @ 09:22:15.681\\",jpg
\\"Sep 20, 2015 @ 09:21:34.096\\",jpg
\\"Sep 20, 2015 @ 09:11:27.068\\",gif
\\"Sep 20, 2015 @ 09:08:30.796\\",css
\\"Sep 20, 2015 @ 08:49:57.121\\",jpg
\\"Sep 20, 2015 @ 08:40:41.779\\",png
\\"Sep 20, 2015 @ 08:34:53.186\\",css
\\"Sep 20, 2015 @ 08:15:38.922\\",png
\\"Sep 20, 2015 @ 07:50:33.356\\",jpg
\\"Sep 20, 2015 @ 07:23:02.614\\",css
\\"Sep 20, 2015 @ 07:18:15.800\\",css
\\"Sep 20, 2015 @ 07:07:01.048\\",jpg
\\"Sep 20, 2015 @ 06:41:00.585\\",css
\\"Sep 20, 2015 @ 06:39:27.633\\",jpg
\\"Sep 20, 2015 @ 06:26:36.476\\",png
\\"Sep 20, 2015 @ 06:26:10.475\\",css
\\"Sep 20, 2015 @ 06:24:30.150\\",jpg
\\"Sep 20, 2015 @ 06:03:53.342\\",jpg
\\"Sep 20, 2015 @ 05:48:01.031\\",gif
\\"Sep 20, 2015 @ 04:32:06.465\\",jpg
\\"Sep 20, 2015 @ 04:22:45.702\\",jpg
\\"Sep 20, 2015 @ 04:18:54.867\\",css
\\"Sep 20, 2015 @ 04:11:49.921\\",jpg
\\"Sep 20, 2015 @ 03:48:32.880\\",jpg
\\"Sep 20, 2015 @ 03:44:10.788\\",jpg
"
`;

exports[`discover - group 1 Discover Embeddable - Generate CSV report per panel Generate Embeddable CSV for savedDiscoverSessionWithESQL generates a report with custom time range 1`] = `
"averageB,extension
\\"10497.149253731342\\",png
\\"5738.34725848564\\",css
\\"5536.247799152266\\",jpg
\\"4868.18064516129\\",php
\\"466.22712933753945\\",gif
"
`;

exports[`discover - group 1 Discover Embeddable - Generate CSV report per panel Generate Embeddable CSV for savedDiscoverSessionWithESQL generates a report with global time range 1`] = `
"averageB,extension
\\"10429.042836041359\\",png
\\"5765.214962121212\\",css
\\"5563.784938941655\\",jpg
\\"4884.612149532711\\",php
\\"471.8752783964365\\",gif
"
`;
